@startuml
title Register a job  that a collaborator needs to have

skinparam classAttributeIconSize 0

class Repositories {
    getJobRepository();
    Repositories();
}
class RegisterJobController {
    + RegisterJobController()
    + registerJob(jobName: String)

}

class RegisterJobUI {
    +main(args: String[]): void
}

class RegisterJobRepository {
    RegisterJobRepository()
}
class job{
    +String name
}


RegisterJobUI ..> RegisterJobController: inputs wanted data
RegisterJobController ..> Repositories : inserts job in the repository
Repositories ..> RegisterJobRepository : Have
RegisterJobRepository ..> job : Have
job ..> RegisterJobController : will be inserted
@enduml